added energy holder with resources

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -53,12 +53,14 @@
   "block.phoenixtales.huo_sapling": "Huo Sapling",
   "block.phoenixtales.ceramic_block": "Ceramic Block",
   "block.phoenixtales.burnt_ceramic_block": "Burnt Ceramic Block",
+  "block.phoenixtales.energy_store": "Energy Store",
   "block.phoenixtales.assembler": "Assembler",
   "block.phoenixtales.alloy_factory": "Alloy Factory",
   "block.phoenixtales.press_factory": "Press Factory",
   "block.phoenixtales.enhancing_factory": "Enhancing Factory",
   "block.phoenixtales.simple_ht_factory": "Simple HT-Factory",
 
+  "screen.phoenixtales.energy_store": "Energy Store",
   "screen.phoenixtales.assembler": "Assembler",
   "screen.phoenixtales.alloy": "Alloy Factory",
   "screen.phoenixtales.press": "Press Factory",
