--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -25,6 +25,7 @@
   "item.phoenixtales.enhanced_redstone": "Enhanced Redstone",
   "item.phoenixtales.simple_controller": "Simple Controller",
   "item.phoenixtales.advanced_controller": "Advanced Controller",
+  "item.phoenixtales.configurator": "§bConfigurator",
   "item.phoenixtales.energy_holder": "§bEnergy Holder",
   "item.phoenixtales.ceramic_blend": "Ceramic Blend",
   "item.phoenixtales.ceramic": "Ceramic",
