--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -54,6 +54,7 @@
   "block.phoenixtales.huo_sapling": "Huo Sapling",
   "block.phoenixtales.ceramic_block": "Ceramic Block",
   "block.phoenixtales.burnt_ceramic_block": "Burnt Ceramic Block",
+  "block.phoenixtales.cable": "Cable",
   "block.phoenixtales.energy_store": "Energy Store",
   "block.phoenixtales.assembler": "Assembler",
   "block.phoenixtales.alloy_factory": "Alloy Factory",
@@ -70,17 +71,17 @@
   "biome.phoenixtales.dim_biome": "§4Smouldering Plains",
   "biome.phoenixtales.dim_tree_biome": "§4Smouldering Forrest",
 
-  "tooltip.phoenixtales.fall_item": "§9Phoenix Tales: Fall",
-  "tooltip.phoenixtales.rise_item": "§9Phoenix Tales: Rise",
-  "tooltip.phoenixtales.origins_item": "§9Phoenix Tales: Origins",
+  "tooltip.phoenixtales.fall_item": "§9PhoenixTales: Fall",
+  "tooltip.phoenixtales.rise_item": "§9PhoenixTales: Rise",
+  "tooltip.phoenixtales.origins_item": "§9PhoenixTales: Origins",
   "tooltip.phoenixtales.rotten_heart": "§7§oShould i eat this?",
   "tooltip.phoenixtales.saw": "§b§oCTRL",
   "tooltip.phoenixtales.saw_ctrl": "§7§oused to make machine parts",
   "tooltip.phoenixtales.energyholder.autocharge.on": "§7auto charge: §aenabled",
   "tooltip.phoenixtales.energyholder.autocharge.off": "§7auto charge: §cdisabled",
 
-  "itemGroup.origins_item_group": "Phoenix Tales: Items",
-  "itemGroup.origins_block_group": "Phoenix Tales: Blocks",
+  "itemGroup.origins_item_group": "PhoenixTales: Items",
+  "itemGroup.origins_block_group": "PhoenixTales: Blocks",
 
   "jei.phoenixtales.press": "Pressing"
 }
