updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -78,6 +78,7 @@
   "block.phoenixtales.hui_sapling": "Hui Sapling",
   "block.phoenixtales.hui_door": "Hui Door",
   "block.phoenixtales.hui_trapdoor": "Hui Trapdoor",
+  "block.phoenixtales.charred_debris": "Charred Debris",
   "block.phoenixtales.ceramic_block": "Ceramic Block",
   "block.phoenixtales.burnt_ceramic_block": "Burnt Ceramic Block",
   "block.phoenixtales.cable": "Cable",
