updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -54,7 +54,10 @@
   "block.phoenixtales.huo_sapling": "Huo Sapling",
   "block.phoenixtales.ceramic_block": "Ceramic Block",
   "block.phoenixtales.burnt_ceramic_block": "Burnt Ceramic Block",
+  "block.phoenixtales.simple_cable": "Simple Cable",
   "block.phoenixtales.cable": "Cable",
+  "block.phoenixtales.advanced_cable": "Advanced Cable",
+  "block.phoenixtales.overloaded_cable": "Overloaded Cable",
   "block.phoenixtales.energy_store": "Energy Store",
   "block.phoenixtales.assembler": "Assembler",
   "block.phoenixtales.alloy_factory": "Alloy Factory",
