updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -105,7 +105,7 @@
   "tooltip.phoenixtales.energyholder.autocharge.off": "§7auto charge: §cdisabled",
 
   "itemGroup.origins_item_group": "PhoenixTales: Items",
-  "itemGroup.tab_block": "PhoenixTales: Blocks",
+  "itemGroup.origins_block_group": "PhoenixTales: Blocks",
 
   "jei.phoenixtales.press": "Pressing"
   
