updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -24,6 +24,7 @@
   "item.phoenixtales.apatite": "Apatite",
   "item.phoenixtales.kernite": "Kernite",
   "item.phoenixtales.transistor": "Transistor",
+  "item.phoenixtales.clay_and_gravel": "Clay and Gravel",
   "item.phoenixtales.enhanced_redstone": "Enhanced Redstone",
   "item.phoenixtales.simple_controller": "Simple Controller",
   "item.phoenixtales.advanced_controller": "Advanced Controller",
