updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -3,6 +3,8 @@
   "language.code": "en_us",
   "language.region": "United States",
 
+  "item.phoenixtales.steel_ingot": "Steel Ingot",
+  "item.phoenixtales.steel_plate": "Steel Plate",
   "item.phoenixtales.vanadium_ingot": "Vanadium Ingot",
   "item.phoenixtales.vanadium_nugget": "Vanadium Nugget",
   "item.phoenixtales.vanadium_plate": "Vanadium Plate",
