updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -47,6 +47,7 @@
   "block.phoenixtales.realmstone": "Realmstone",
   "block.phoenixtales.vanadium_block": "Vanadium Block",
   "block.phoenixtales.vanadium_chassis": "Vanadium Chassis",
+  "block.phoenixtales.steel_chassis": "Steel Chassis",
   "block.phoenixtales.nickel_ore": "Nickel Ore",
   "block.phoenixtales.nickel_block": "Nickel Block",
   "block.phoenixtales.steel_block": "Steel Block",
