updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "item.phoenixtales.steel_ingot": "Steel Ingot",
   "item.phoenixtales.steel_plate": "Steel Plate",
+  "item.phoenixtales.steel_rod": "Steel Rod",
   "item.phoenixtales.vanadium_ingot": "Vanadium Ingot",
   "item.phoenixtales.vanadium_nugget": "Vanadium Nugget",
   "item.phoenixtales.vanadium_plate": "Vanadium Plate",
@@ -14,7 +15,7 @@
   "item.phoenixtales.nickel_part": "Nickel Machine Part",
   "item.phoenixtales.invar_ingot": "Invar Ingot",
   "item.phoenixtales.invar_nugget": "Invar Nugget",
-  "item.phoenixtales.invar_part": "Invar Machine Part",
+  "item.phoenixtales.invar_rod": "Invar Rod",
   "item.phoenixtales.metal_saw": "Metal Saw",
   "item.phoenixtales.hammer": "Hammer",
   "item.phoenixtales.silicon": "Silicon",
@@ -28,8 +29,10 @@
   "item.phoenixtales.transistor": "Transistor",
   "item.phoenixtales.clay_and_sand": "Clay and Sand",
   "item.phoenixtales.enhanced_redstone": "Enhanced Redstone",
+  "item.phoenixtales.redstone_controller": "Redstone Controller",
   "item.phoenixtales.simple_controller": "Simple Controller",
   "item.phoenixtales.advanced_controller": "Advanced Controller",
+  "item.phoenixtales.overloaded_controller": "Overloaded Controller",
   "item.phoenixtales.configurator": "§bConfigurator",
   "item.phoenixtales.energy_holder": "§bEnergy Holder",
   "item.phoenixtales.ceramic_blend": "Ceramic Blend",
