updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -38,6 +38,7 @@
   "item.phoenixtales.ceramic_blend": "Ceramic Blend",
   "item.phoenixtales.ceramic": "Ceramic",
   "item.phoenixtales.slag": "Slag",
+  "item.phoenixtales.wafer": "Wafer",
   "item.phoenixtales.glass_shard": "Glass Shard",
   "item.phoenixtales.rotten_heart": "Rotten Heart",
   "item.phoenixtales.tin_solder": "Tin Solder",
