updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -106,6 +106,7 @@
   "block.phoenixtales.enhancing_factory": "Enhancing Factory",
   "block.phoenixtales.simple_ht_factory": "Simple HT-Factory",
   "block.phoenixtales.engineers_anvil": "Engineer's Anvil",
+  "block.phoenixtales.soldering_table": "Soldering Table",
   "block.phoenixtales.smelting_furnace_lower": "Smelting Furnace",
   "block.phoenixtales.smelting_furnace_upper": "Smelting Furnace",
 
