updated or added

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -45,6 +45,8 @@
   "item.phoenixtales.mechanical_arm": "Mechanical Arm",
 
   "block.phoenixtales.vanadium_ore": "Vanadium Ore",
+  "block.phoenixtales.tin_ore": "Tin Ore",
+  "block.phoenixtales.copper_ore": "Copper Ore",
   "block.phoenixtales.sulfur_ore": "Sulfur Ore",
   "block.phoenixtales.apatite_ore": "Apatite Ore",
   "block.phoenixtales.kernite_ore": "Kernite Ore",
