--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -134,5 +134,6 @@
 
   "category.phoenixtales.forge": "Forging",
   "category.phoenixtales.assemble": "Assembling",
-  "category.phoenixtales.press": "Pressing"
+  "category.phoenixtales.press": "Pressing",
+  "category.phoenixtales.soldering": "Soldering"
 }
