--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -6,6 +6,11 @@
   "item.phoenixtales.steel_ingot": "Steel Ingot",
   "item.phoenixtales.steel_plate": "Steel Plate",
   "item.phoenixtales.steel_rod": "Steel Rod",
+  "item.phoenixtales.copper_ingot": "Copper Ingot",
+  "item.phoenixtales.copper_plate": "Copper Plate",
+  "item.phoenixtales.copper_wire": "Copper Wire",
+  "item.phoenixtales.copper_nugget": "Copper Nugget",
+  "item.phoenixtales.tin_ingot": "Tin Ingot",
   "item.phoenixtales.vanadium_ingot": "Vanadium Ingot",
   "item.phoenixtales.vanadium_nugget": "Vanadium Nugget",
   "item.phoenixtales.vanadium_plate": "Vanadium Plate",
@@ -58,6 +63,8 @@
   "block.phoenixtales.nickel_ore": "Nickel Ore",
   "block.phoenixtales.nickel_block": "Nickel Block",
   "block.phoenixtales.steel_block": "Steel Block",
+  "block.phoenixtales.copper_block": "Copper Block",
+  "block.phoenixtales.tin_block": "Tin Block",
   "block.phoenixtales.invar_block": "Invar Block",
   "block.phoenixtales.searing_stone": "Searing Stone",
   "block.phoenixtales.searing_cobblestone": "Searing Cobblestone",
