added or edited

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -49,6 +49,7 @@
   "item.phoenixtales.tin_solder": "Tin Solder",
   "item.phoenixtales.mechanical_arm": "Mechanical Arm",
   "item.phoenixtales.soldering_iron": "Soldering-Iron",
+  "item.phoenixtales.water_tank": "Water Tank",
 
   "block.phoenixtales.vanadium_ore": "Vanadium Ore",
   "block.phoenixtales.tin_ore": "Tin Ore",
