added or edited

--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.phoenixtales.steel_ingot": "Steel Ingot",
   "item.phoenixtales.steel_plate": "Steel Plate",
   "item.phoenixtales.steel_rod": "Steel Rod",
+  "item.phoenixtales.steel_nugget": "Steel Nugget",
   "item.phoenixtales.copper_ingot": "Copper Ingot",
   "item.phoenixtales.copper_plate": "Copper Plate",
   "item.phoenixtales.copper_wire": "Copper Wire",
@@ -17,7 +18,7 @@
   "item.phoenixtales.vanadium_part": "Vanadium Machine Part",
   "item.phoenixtales.nickel_ingot": "Nickel Ingot",
   "item.phoenixtales.nickel_nugget": "Nickel Nugget",
-  "item.phoenixtales.nickel_part": "Nickel Machine Part",
+  "item.phoenixtales.nickel_plate": "Nickel Plate",
   "item.phoenixtales.invar_ingot": "Invar Ingot",
   "item.phoenixtales.invar_nugget": "Invar Nugget",
   "item.phoenixtales.invar_rod": "Invar Rod",
@@ -49,6 +50,7 @@
   "item.phoenixtales.tin_solder": "Tin Solder",
   "item.phoenixtales.mechanical_arm": "Mechanical Arm",
   "item.phoenixtales.soldering_iron": "Soldering-Iron",
+  "item.phoenixtales.steel_reinforced_mechanical_arm": "Steel Reinforced Mechanical Arm",
   "item.phoenixtales.water_tank": "Water Tank",
 
   "block.phoenixtales.vanadium_ore": "Vanadium Ore",
