--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.phoenixtales.copper_wire": "Copper Wire",
   "item.phoenixtales.copper_nugget": "Copper Nugget",
   "item.phoenixtales.tin_ingot": "Tin Ingot",
+  "item.phoenixtales.tin_nugget": "Tin Nugget",
   "item.phoenixtales.vanadium_ingot": "Vanadium Ingot",
   "item.phoenixtales.vanadium_nugget": "Vanadium Nugget",
   "item.phoenixtales.vanadium_plate": "Vanadium Plate",
