--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -117,18 +117,18 @@
   "block.phoenixtales.assembler": "Assembler",
   "block.phoenixtales.alloy_factory": "Alloy Factory",
   "block.phoenixtales.press_factory": "Press Factory",
-  "block.phoenixtales.enhancing_factory": "Enhancing Factory",
-  "block.phoenixtales.simple_ht_factory": "Simple HT-Factory",
   "block.phoenixtales.engineers_anvil": "Engineer's Anvil",
   "block.phoenixtales.soldering_table": "Soldering Table",
   "block.phoenixtales.smelting_furnace_lower": "Smelting Furnace",
   "block.phoenixtales.smelting_furnace_upper": "Smelting Furnace",
   "block.phoenixtales.heat_generator": "Heat Generator",
+  "block.phoenixtales.ht_factory": "HT-Factory",
 
   "screen.phoenixtales.energy_store": "Energy Store",
   "screen.phoenixtales.assembler": "Assembler",
   "screen.phoenixtales.alloy": "Alloy Factory",
   "screen.phoenixtales.press": "Press Factory",
+  "screen.phoenixtales.ht": "HT-Factory",
   "screen.phoenixtales.enhancing": "Enhancing Factory",
 
   "tooltip.phoenixtales.fall_item": "§9PhoenixTales: Fall",
