--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -113,6 +113,7 @@
   "block.phoenixtales.cable": "Cable",
   "block.phoenixtales.advanced_cable": "Advanced Cable",
   "block.phoenixtales.overloaded_cable": "Overloaded Cable",
+  "block.phoenixtales.pipe": "Pipe",
   "block.phoenixtales.energy_store": "Energy Store",
   "block.phoenixtales.assembler": "Assembler",
   "block.phoenixtales.alloy_factory": "Alloy Factory",
