--- a/src/main/resources/assets/phoenixtales/lang/en_us.json
+++ b/src/main/resources/assets/phoenixtales/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.phoenixtales.tin_ingot": "Tin Ingot",
   "item.phoenixtales.tin_nugget": "Tin Nugget",
   "item.phoenixtales.tin_wire": "Tin Wire",
+  "item.phoenixtales.tin_plate": "Tin Plate",
   "item.phoenixtales.vanadium_ingot": "Vanadium Ingot",
   "item.phoenixtales.vanadium_nugget": "Vanadium Nugget",
   "item.phoenixtales.vanadium_plate": "Vanadium Plate",
